# learning_ngspice

./: .gitignore  ANALISE_CIRCUITOS_NOVOS.md  CIRCUIT_STATUS_REPORT.md  CORRECOES_REALIZADAS.md  FIX_GUIDE.md  LICENSE  QUICK_STATUS.txt  README.md  SLiCAP.ini  VERIFICATION_INDEX.md  VERIFICATION_SUMMARY.txt  justfile  pyproject.toml
ckt_07ym2zd2/: circuit.tex
ckt_0ickq1mc/: circuit.tex
ckt_0swpasx6/: circuit.tex
ckt_2_l34_5z/: circuit.tex
ckt_2oc6cwph/: circuit.tex
ckt_2stjcuk4/: circuit.tex
ckt_36hh6gak/: circuit.tex
ckt_3y2_0t0z/: circuit.tex
ckt_4vyd2vto/: circuit.tex
ckt_6jsy_fa2/: circuit.tex
ckt__0i0daut/: circuit.tex
ckt_a713yax5/: circuit.tex
ckt_b05u90i2/: circuit.tex
ckt_e00h16c_/: circuit.tex
ckt_efzz1iva/: circuit.tex
ckt_f45l3stk/: circuit.tex
ckt_fct_5ike/: circuit.tex
ckt_g6o5mok5/: circuit.tex
ckt_gddruzb8/: circuit.tex
ckt_gkudc214/: circuit.tex
ckt_h1__oxx9/: circuit.tex
ckt_h4ivt4v5/: circuit.tex
ckt_i_4aqxv7/: circuit.tex
ckt_j9rohygt/: circuit.tex
ckt_kml5ezpu/: circuit.tex
ckt_l_q4v2av/: circuit.tex
ckt_m83folv8/: circuit.tex
ckt_nhy9ppql/: circuit.tex
ckt_oefkcd1t/: circuit.tex
ckt_q90m81pq/: circuit.tex
ckt_qasdjyde/: circuit.tex
ckt_qceeehsw/: circuit.tex
ckt_szb51oc4/: circuit.tex
ckt_t8g96rtu/: circuit.tex
ckt_tu7w6c5u/: circuit.tex
ckt_u7px5ia7/: circuit.tex
ckt_ug6auws3/: circuit.tex
ckt_utunu273/: circuit.tex
ckt_vajt8p9a/: circuit.tex
ckt_venbpiou/: circuit.tex
ckt_xao1l9qq/: circuit.tex
ckt_xvpw1dkd/: circuit.tex
ckt_y7lkv2r2/: circuit.tex
(+181 files in other folders)
